# Myram

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: index.html  main.css  main.js  style.css  window.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: color.css  header.css  main.css  todo.css  window.css
src/js/: keyConfig.js  main.js  selectElement.js  window.js
